# dayan.rs

./: Cargo.toml
.github/workflows/: publish.yml
projects/dayan/: Cargo.toml
projects/dayan-web/: Cargo.toml  Dioxus.toml
projects/dayan-web/src/: main.rs
projects/dayan-web/src/components/: mod.rs
projects/dayan-web/src/config/: mod.rs
projects/dayan/src/: lib.rs
projects/dayan/src/alpha/: alpha.md  display.rs  mod.rs  parser.rs  rank2.md  readme.md  row2.md  vs-arrow.md
projects/dayan/src/beta/: arithmetic.rs  mod.rs  parser.rs  vs-pss.md
projects/dayan/src/bms/: display.rs  mod.rs  parser.rs
projects/dayan/src/dps/: mod.rs  row2.md
projects/dayan/src/errors/: mod.rs
projects/dayan/src/expression/: arithmetic.rs
projects/dayan/src/gamma/: display.rs  mod.rs  parser.rs  readme.md  win.md
projects/dayan/src/n_ary_hydra/: arithmetic.rs  display.rs  kind1.md  mod.rs  parser.rs
projects/dayan/src/psi/: display.rs
projects/dayan/src/traits/: mod.rs
projects/dayan/tests/: main.rs  psi.md  psi.txt
projects/dayan/tests/hydra/: mod.rs
projects/dayan/tests/y_sequence/: mod.rs
projects/dayan_fhg/: Cargo.toml
projects/dayan_fhg/src/: errors.rs  lib.rs
projects/dayan_fhg/src/beta/: arithmetic.rs  mod.rs  readme.md
projects/dayan_fhg/src/bms/: display.rs  mod.rs
projects/dayan_fhg/src/errors/: for_std.rs
projects/dayan_fhg/src/expression/: arithmetic.rs  display.rs  mod.rs
projects/dayan_fhg/src/psi/: display.rs  mod.rs  parser.rs
projects/dayan_fhg/src/utils/: mod.rs
projects/dayan_fhg/tests/: main.rs  psi.md  psi.txt
projects/hydra-nary/: Cargo.toml
projects/hydra-nary/src/: lib.rs
projects/hydra-nary/src/ast/: arithmetic.rs  ary-fast.md  ary1-prss.md  ary2-pss.md  ary3-bms.md  display.rs  mod.rs
projects/hydra-nary/src/parse/: mod.rs
projects/hydra-nary/src/render/: display.rs  mod.rs  tex.rs
projects/hydra-nary/tests/: main.rs
