[package]
name = "dayan"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/dayan"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
pex = "0.1.6"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
