[package]
name = "hydra-nary"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "n-ary hydra notation for ordinal analysis"
repository = "https://github.com/oovm/dayan.rs"
documentation = "https://docs.rs/hydra-nary"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
num-traits = "0.2.14"
latexify = "0.1.0"

[dependencies.pex]
version = "0.2.4"
optional = true

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
